<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.veb_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.veb_app.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_checklist"
        android:name="com.example.veb_app.ui.checklist.ChecklistFragment"
        android:label="@string/menu_checklist"
        tools:layout="@layout/fragment_checklist" />

    <fragment
        android:id="@+id/nav_budget"
        android:name="com.example.veb_app.ui.budget.BudgetFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.veb_app.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>